{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 29,
  "lineage": "7e7eb838-84f4-9da3-6511-8c27f17cf9c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:874766317012:internet-gateway/igw-0eddd4faf595eedcf",
            "id": "igw-0eddd4faf595eedcf",
            "owner_id": "874766317012",
            "tags": {
              "Name": "bounty-igw"
            },
            "tags_all": {
              "Name": "bounty-igw"
            },
            "vpc_id": "vpc-015109d0e28010907"
          },
          "dependencies": [
            "aws_vpc.bounty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:874766317012:route-table/rtb-050238578cf7cfa0e",
            "id": "rtb-050238578cf7cfa0e",
            "owner_id": "874766317012",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eddd4faf595eedcf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bounty-public-rt"
            },
            "tags_all": {
              "Name": "bounty-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-015109d0e28010907"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.bounty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fffb2a873a3910d0",
            "route_table_id": "rtb-050238578cf7cfa0e",
            "subnet_id": "subnet-03805a339505901d8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.bounty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bounty_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:874766317012:security-group/sg-095e03aeda31d5fd2",
            "description": "Security group for Bounty application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095e03aeda31d5fd2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bounty-security-group",
            "name_prefix": "",
            "owner_id": "874766317012",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015109d0e28010907"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bounty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:874766317012:subnet/subnet-03805a339505901d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03805a339505901d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "874766317012",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bounty-public-subnet"
            },
            "tags_all": {
              "Name": "bounty-public-subnet"
            },
            "vpc_id": "vpc-015109d0e28010907"
          },
          "dependencies": [
            "aws_vpc.bounty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bounty_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:874766317012:vpc/vpc-015109d0e28010907",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cbc2b127dec2f2b7",
            "default_route_table_id": "rtb-018ee6ec8dcf9807a",
            "default_security_group_id": "sg-02a2ce9ac7fcc59a5",
            "dhcp_options_id": "dopt-055e40b2d3770754e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015109d0e28010907",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-018ee6ec8dcf9807a",
            "owner_id": "874766317012",
            "tags": {
              "Name": "bounty-vpc"
            },
            "tags_all": {
              "Name": "bounty-vpc"
            }
          }
        }
      ]
    }
  ]
}